# law_agent

./: .env  .env.example  .gitignore  agent.py  db_test.py  embedding.py  main.py  print_law_name.py  pyproject.toml  query_classifier.py  raft_state.json  redis_client.py  requirements.txt  retrieve.py  retrive.py  semantic_cache.py  upload.py
Upload_into_database/: upload_acts.py  upload_constitution.py  upload_old_case.py
notebooks/: chunking.ipynb
prompts/: prompt.py
recommendation/: storage.py  user_recommendation.py
src/api/: dependencies.py  main.py
src/api/routes/: retrieve_routes.py  upload_routes.py
src/config/: settings.py
src/services/: document_processor.py  embedding_service.py  file_parser.py  llm_agent.py  vectorstore.py
